self_tests/masked_sboxs/canright_masked_noreuse/for_verify/verify_ng_ni.txt
>proc aes_sbox_canright_masked_noreuse added
>Checking NI for aes_sbox_canright_masked_noreuse: (no transition,no glitch)
948 tuples to check
.start poly
aux
depend = 
ps = op_i_0 * op_i_1 * i_1.[1]/i_11/ * i_1.[0]/i_10/ +
     op_i_0 * op_i_1 * i_1.[0]/i_10/ * i_2.[1]/i_21/ +
     op_i_0 * op_i_1 * i_1.[1]/i_11/ * i_2.[0]/i_20/ +
     op_i_0 * op_i_1 * i_2.[1]/i_21/ * i_2.[0]/i_20/ +
     op_i_0 * op_i_1 * i_1.[1]/i_11/ * i_3.[0]/i_30/ +
     op_i_0 * op_i_1 * i_3.[1]/i_31/ * i_3.[0]/i_30/ +
     op_i_0 * op_i_1 * i_1.[1]/i_11/ * i_4.[0]/i_40/ +
     op_i_0 * op_i_1 * i_3.[1]/i_31/ * i_4.[0]/i_40/ +
     op_i_0 * op_i_1 * i_1.[0]/i_10/ * i_6.[1]/i_61/ +
     op_i_0 * op_i_1 * i_2.[0]/i_20/ * i_6.[1]/i_61/ +
     op_i_0 * op_i_1 * i_1.[0]/i_10/ * i_7.[1]/i_71/ +
     op_i_0 * op_i_1 * i_2.[0]/i_20/ * i_7.[1]/i_71/ +
     op_i_0 * op_i_1 * i_2.[1]/i_21/ * i_7.[0]/i_70/ +
     op_i_0 * op_i_1 * i_3.[1]/i_31/ * i_7.[0]/i_70/ +
     op_i_0 * op_i_1 * i_6.[1]/i_61/ * i_7.[0]/i_70/ +
     op_i_0 * op_i_1 * i_7.[1]/i_71/ * i_7.[0]/i_70/ +
     op_i_0 * i_1.[1]/i_11/ * i_1.[0]/i_10/ +
     op_i_0 * i_1.[0]/i_10/ * i_2.[1]/i_21/ +
     op_i_0 * i_1.[1]/i_11/ * i_2.[0]/i_20/ +
     op_i_0 * i_2.[1]/i_21/ * i_2.[0]/i_20/ +
     op_i_0 * op_i_1 * i_3.[0]/i_30/ +
     op_i_0 * i_1.[1]/i_11/ * i_3.[0]/i_30/ +
     op_i_0 * i_3.[1]/i_31/ * i_3.[0]/i_30/ +
     op_i_0 * op_i_1 * i_4.[0]/i_40/ +
     op_i_0 * i_1.[1]/i_11/ * i_4.[0]/i_40/ +
     op_i_0 * i_3.[1]/i_31/ * i_4.[0]/i_40/ +
     op_i_0 * i_1.[0]/i_10/ * i_6.[1]/i_61/ +
     op_i_0 * i_2.[0]/i_20/ * i_6.[1]/i_61/ +
     op_i_0 * i_1.[0]/i_10/ * i_7.[1]/i_71/ +
     op_i_0 * i_2.[0]/i_20/ * i_7.[1]/i_71/ +
     op_i_0 * op_i_1 * i_7.[0]/i_70/ +
     op_i_0 * i_2.[1]/i_21/ * i_7.[0]/i_70/ +
     op_i_0 * i_3.[1]/i_31/ * i_7.[0]/i_70/ +
     op_i_0 * i_6.[1]/i_61/ * i_7.[0]/i_70/ +
     op_i_0 * i_7.[1]/i_71/ * i_7.[0]/i_70/ + i_1.[1]/i_11/ * i_1.[0]/i_10/ +
     i_1.[0]/i_10/ * i_2.[1]/i_21/ + i_1.[1]/i_11/ * i_2.[0]/i_20/ +
     i_2.[1]/i_21/ * i_2.[0]/i_20/ + op_i_0 * i_3.[0]/i_30/ +
     op_i_0 * i_4.[0]/i_40/ + i_1.[0]/i_10/ * i_6.[1]/i_61/ +
     i_2.[0]/i_20/ * i_6.[1]/i_61/ + i_1.[0]/i_10/ * i_7.[1]/i_71/ +
     i_2.[0]/i_20/ * i_7.[1]/i_71/ + op_i_0 * i_7.[0]/i_70/ +
     i_1.[1]/i_11/ * i_7.[0]/i_70/ + i_2.[1]/i_21/ * i_7.[0]/i_70/ +
     i_6.[1]/i_61/ * i_7.[0]/i_70/ + i_7.[1]/i_71/ * i_7.[0]/i_70/#
No rnd rule
end poly
Error aes_sbox_canright_masked_noreuse is not NI:
Cannot check
(* stdin: line 258 (2-119) *)
(* from [~ (~ ((~ (i_2.[0]/i_20/ ^ i_1.[0]/i_10/) ^ ~ i_7.[0]/i_70/) & (op_i_1 & ~ op_i_0)) & ~ (~ (op_i_1 & ~ op_i_0) & ~ (~ ((~ (i_3.[0]/i_30/ ^ i_4.[0]/i_40/) ^ ~ i_7.[0]/i_70/) & (op_i_0 & ~ op_i_1)) & ~ (~ (op_i_0 & ~ op_i_1) & (~ (i_2.[0]/i_20/ ^ i_1.[0]/i_10/) ^ ~ i_7.[0]/i_70/)))))] & [~ (~ ((~ (i_1.[1]/i_11/ ^ i_2.[1]/i_21/) ^ i_6.[1]/i_61/ ^ ~ i_7.[1]/i_71/) & (op_i_1 & ~ op_i_0)) & ~ (~ (op_i_1 & ~ op_i_0) & ~ (~ (~ (i_3.[1]/i_31/ ^ i_1.[1]/i_11/) & (op_i_0 & ~ op_i_1)) & ~ (~ (op_i_0 & ~ op_i_1) & (~ (i_1.[1]/i_11/ ^ i_2.[1]/i_21/) ^ i_6.[1]/i_61/ ^ ~ i_7.[1]/i_71/)))))] *)
~ (~ ((~ (i_2.[0]/i_20/ ^ i_1.[0]/i_10/) ^ ~ i_7.[0]/i_70/) & (op_i_1 & ~ op_i_0)) & ~ (~ (op_i_1 & ~ op_i_0) & ~ (~ ((~ (i_3.[0]/i_30/ ^ i_4.[0]/i_40/) ^ ~ i_7.[0]/i_70/) & (op_i_0 & ~ op_i_1)) & ~ (~ (op_i_0 & ~ op_i_1) & (~ (i_2.[0]/i_20/ ^ i_1.[0]/i_10/) ^ ~ i_7.[0]/i_70/))))) & ~ (~ ((~ (i_1.[1]/i_11/ ^ i_2.[1]/i_21/) ^ i_6.[1]/i_61/ ^ ~ i_7.[1]/i_71/) & (op_i_1 & ~ op_i_0)) & ~ (~ (op_i_1 & ~ op_i_0) & ~ (~ (~ (i_3.[1]/i_31/ ^ i_1.[1]/i_11/) & (op_i_0 & ~ op_i_1)) & ~ (~ (op_i_0 & ~ op_i_1) & (~ (i_1.[1]/i_11/ ^ i_2.[1]/i_21/) ^ i_6.[1]/i_61/ ^ ~ i_7.[1]/i_71/)))))

reduce to
~ (~ ((~ (i_2.[0]/i_20/ ^ i_1.[0]/i_10/) ^ ~ i_7.[0]/i_70/) & (op_i_1 & ~ op_i_0)) & ~ (~ (op_i_1 & ~ op_i_0) & ~ (~ ((~ (i_3.[0]/i_30/ ^ i_4.[0]/i_40/) ^ ~ i_7.[0]/i_70/) & (op_i_0 & ~ op_i_1)) & ~ (~ (op_i_0 & ~ op_i_1) & (~ (i_2.[0]/i_20/ ^ i_1.[0]/i_10/) ^ ~ i_7.[0]/i_70/))))) & ~ (~ ((~ (i_1.[1]/i_11/ ^ i_2.[1]/i_21/) ^ i_6.[1]/i_61/ ^ ~ i_7.[1]/i_71/) & (op_i_1 & ~ op_i_0)) & ~ (~ (op_i_1 & ~ op_i_0) & ~ (~ (~ (i_3.[1]/i_31/ ^ i_1.[1]/i_11/) & (op_i_0 & ~ op_i_1)) & ~ (~ (op_i_0 & ~ op_i_1) & (~ (i_1.[1]/i_11/ ^ i_2.[1]/i_21/) ^ i_6.[1]/i_61/ ^ ~ i_7.[1]/i_71/)))))
>Bye bye!
